--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
-  <base href="/">
+  <title>People Profile App</title>
+  <base href="/src">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/images/people.ico">
 </head>
 <body>
   <app-root></app-root>
-</body>s
+</body>
 </html>
