--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>People Profile App</title>
+  <title>User List - Demo</title>
   <base href="/src">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="src/images/people.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/people.ico">
 </head>
 <body>
   <app-root></app-root>
